force-app/main/default/objects/Producto_Muestra__c/Producto_Muestra__c.object-meta.xml
<CustomObject>
    <label>Producto Muestra</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nro reg.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos Muestras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>