force-app/main/default/objects/Producto_Muestra__c/fields/Pedido_de_muestras__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_muestras__c</fullName>
    <label>Pedido de muestras</label>
    <referenceTo>Pedido_de_muestras__c</referenceTo>
    <relationshipLabel>Productos Muestras</relationshipLabel>
    <relationshipName>Productos_Muestras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>