force-app/main/default/objects/Producto_Muestra__c/fields/Precio_Items__c.field-meta.xml
<CustomField>
    <fullName>Precio_Items__c</fullName>
    <formula>Precio_Lista__c *  Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>